--- a/SOPCOVIDChecker/Views/Sop/Patients.cshtml
+++ b/SOPCOVIDChecker/Views/Sop/Patients.cshtml
@@ -67,7 +67,7 @@
     </div>
 </div>
 <script>
-    var vessel = $('#sop-patients');
+    var vessel = $('#sop-patients 
     var c = [];
     c.push(qFix($('#searchDetail').val()));
     LoadList(c, vessel, '@Url.Action("PatientsJson", "Sop")');
