--- a/SOPCOVIDChecker/Views/Shared/Navbar/_navbarPartialView.cshtml
+++ b/SOPCOVIDChecker/Views/Shared/Navbar/_navbarPartialView.cshtml
@@ -30,7 +30,7 @@
                 <li>
                     <a class="dropdown-item" asp-controller="Sop" asp-action="ExportAll">
                         <i class="fa fa-user-injured"></i>
-                        &nbsp;All Patiemt
+                        &nbsp;All Patient
                     </a>
                 </li>@*
                 <li>
