--- a/SOPCOVIDChecker/Views/Sop/SopIndex.cshtml
+++ b/SOPCOVIDChecker/Views/Sop/SopIndex.cshtml
@@ -68,7 +68,7 @@
             format: 'DD/MM/YYYY',
             startDate: '@ViewBag.StartDate',
             endDate: '@ViewBag.EndDate',
-            opens: 'right'
+            opens: 'left'
         });
     })
 
