--- a/SOPCOVIDChecker/Views/Sop/AddSopModal.cshtml
+++ b/SOPCOVIDChecker/Views/Sop/AddSopModal.cshtml
@@ -29,7 +29,7 @@
             <div class="row">
                 <div class="col-sm-9">
                     <label>Date Onset of Symptoms:</label>
-                    <input type="date" class="form-control" asp-for="DateOnsetSymptoms" id="dateOnset" onload="SetDisabled($(this),'@disabled');"/>
+                    <input type="date" class="form-control" asp-for="DateOnsetSymptoms" id="dateOnset"/>
                 </div>
                 <div class="col-sm-3">
                     <div style="margin-top:30px;">
